--- a/hetzner_server_management/configure_wireguard/templates/client_wg0.conf.j2
+++ b/hetzner_server_management/configure_wireguard/templates/client_wg0.conf.j2
@@ -4,7 +4,7 @@ Address = 172.31.0.2/32
 DNS = 8.8.8.8
 
 [Peer] 
-PublicKey = {{ hostvars['h1'].wireguard__fact_public_key }}
-Endpoint = kbkm.duckdns.org:51820 
+PublicKey = {{ hostvars['hetzner_vpn'].wireguard__fact_public_key }}
+Endpoint = kbkm-vpn.duckdns.org:51820 
 AllowedIPs = 0.0.0.0/0
 PersistentKeepalive = 30
