--- a/hetzner_server_management/create_server/templates/ssh_config.j2
+++ b/hetzner_server_management/create_server/templates/ssh_config.j2
@@ -1,4 +1,3 @@
-
 # This is the ssh client system-wide configuration file.  See
 # ssh_config(5) for more information.  This file provides defaults for
 # users, and the values can be changed in per-user configuration files
@@ -18,12 +17,12 @@
 
 Include /etc/ssh/ssh_config.d/*.conf
 
-Host kbkm-minecraft.duckdns.org
+Host {{ lookup('ansible.builtin.env', 'duckdnsDomainVPN') }}.duckdns.org
   IdentityFile /root/.ssh/vpn_ssh_key
   StrictHostKeyChecking no
   UserKnownHostsFile=/dev/null
 
-Host kbkm-vpn.duckdns.org
+Host {{ lookup('ansible.builtin.env', 'duckdnsDomainMINECRAFT') }}.duckdns.org
   IdentityFile /root/.ssh/minecraft_ssh_key
   StrictHostKeyChecking no
   UserKnownHostsFile=/dev/null
