don't copy paste hetzner_management in converge.yml

--- a/hetzner_server_management/create_server/templates/ssh_config.j2
+++ b/hetzner_server_management/create_server/templates/ssh_config.j2
@@ -17,12 +17,12 @@
 
 Include /etc/ssh/ssh_config.d/*.conf
 
-Host {{ lookup('ansible.builtin.env', 'duckdnsDomainVPN') }}.duckdns.org
+Host {{ lookup('ansible.builtin.env', 'duckdns_domain_vpn') }}.duckdns.org
   IdentityFile /root/.ssh/vpn_ssh_key
   StrictHostKeyChecking no
   UserKnownHostsFile=/dev/null
 
-Host {{ lookup('ansible.builtin.env', 'duckdnsDomainMINECRAFT') }}.duckdns.org
+Host {{ lookup('ansible.builtin.env', 'duckdns_domain_minecraft') }}.duckdns.org
   IdentityFile /root/.ssh/minecraft_ssh_key
   StrictHostKeyChecking no
   UserKnownHostsFile=/dev/null
