variable for duckdns vpn domain

--- a/hetzner_server_management/configure_wireguard/templates/client_wg.conf.j2
+++ b/hetzner_server_management/configure_wireguard/templates/client_wg.conf.j2
@@ -3,8 +3,8 @@ PrivateKey = {{ wireguard_private_key }}
 Address = 172.31.0.2/32
 DNS = 8.8.8.8
 
-[Peer] 
+[Peer]
 PublicKey = {{ hostvars['hetzner_vpn'].wireguard__fact_public_key }}
-Endpoint = kbkm-vpn.duckdns.org:51820 
+Endpoint = {{ lookup('ansible.builtin.env','duckdns_domain_vpn') }}.duckdns.org:51820
 AllowedIPs = 0.0.0.0/0
-PersistentKeepalive = 30
+PersistentKeepalive = 25
