use multi-stage build to install hcloud and change environment variable naming convention

--- a/hetzner_server_management/configure_wireguard/templates/client_wg.conf.j2
+++ b/hetzner_server_management/configure_wireguard/templates/client_wg.conf.j2
@@ -5,6 +5,6 @@ DNS = 8.8.8.8
 
 [Peer]
 PublicKey = {{ hostvars['hetzner_vpn'].wireguard__fact_public_key }}
-Endpoint = {{ lookup('ansible.builtin.env','duckdns_domain_vpn') }}.duckdns.org:51820
+Endpoint = {{ lookup('ansible.builtin.env','DUCKDNS_DOMAIN_VPN') }}.duckdns.org:51820
 AllowedIPs = 0.0.0.0/0
 PersistentKeepalive = 25
